--- a/sass/styleall/_all.scss
+++ b/sass/styleall/_all.scss
@@ -10,10 +10,16 @@ body {
 h2 {
     font-size: 40px;
     text-transform: uppercase;
+    color: #ffffff;
 }
 h3 {
     font-size: 30px;
     text-transform: uppercase;
+}
+
+p {
+    color: #ffffff;
+    font-size: 18px;
 }
 
 .clearfix::after {
