--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -3,3 +3,6 @@
 @import 'styleall/slider';
 @import 'styleall/packages';
 @import 'styleall/about';
+
+@import 'breakpoint/tablet';
+@import 'breakpoint/phone';
