estilos del menulow

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -3,6 +3,4 @@
 @import 'styleall/slider';
 @import 'styleall/packages';
 @import 'styleall/about';
-
-@import 'breakpoint/tablet';
-@import 'breakpoint/phone';
+@import 'styleall/contact';
