--- a/sass/styleall/_about.scss
+++ b/sass/styleall/_about.scss
@@ -8,10 +8,13 @@
 
     img {
         width: 203px;
+        display:block;
+        margin:auto;
     }
 }
 
 #paragraph {
+    margin-top: 140px;
     float: left;
     width: 50%;
 }
