--- a/sass/styleall/_packages.scss
+++ b/sass/styleall/_packages.scss
@@ -3,12 +3,8 @@
     margin: 0 85px 0 85px;
 }
 
-#unique {
-    margin-top: 52px;
-}
-
 .img{
-	width: 397px;
+	width: 27.5%px;
     float: left;
     margin-top: 52px;
 }
@@ -23,5 +19,5 @@
 }
 
 .img + .img{
-	margin-left: 39px;
+	margin-left: 2.7%;
 }
