--- a/sass/styleall/_top.scss
+++ b/sass/styleall/_top.scss
@@ -1,4 +1,5 @@
 #top {
+    width: 100%;
     background-color: #000000;
 }
 
@@ -30,6 +31,7 @@
     }
 
     a {
+        text-transform: uppercase;
         color: #ffffff;
         text-decoration: none;
     }
