agregando el breakpoint ya no me da error

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -97,3 +97,21 @@ p {
 #lowMenu img {
   display: block;
   margin: auto; }
+
+@media (max-width: 1024px) {
+  #nav-list {
+    display: none; }
+  .img + .img {
+    margin-left: 10px;
+    margin-top: 10px; }
+  .img {
+    width: 38%;
+    padding: 5%; } }
+
+@media (max-width: 767px) {
+  .img {
+    width: 100%;
+    padding: 0;
+    float: none; }
+  .img + .img {
+    margin-top: 10px; } }
