--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -4,3 +4,5 @@
 @import 'styleall/packages';
 @import 'styleall/about';
 @import 'styleall/contact';
+@import 'breakpoint/tablet';
+@import 'breakpoint/phone';
