--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -3,7 +3,7 @@ body {
   font-family: Arial, Helvetica, sans-serif; }
 
 #wrapper {
-  width: 1442px; }
+  max-width: 1440px; }
 
 h2 {
   font-size: 40px;
@@ -53,24 +53,19 @@ p {
   max-width: 100%;
   width: 100%; }
 
-/* Our portfolio */
-.img-all {
-  margin: 0 85px 0 85px; }
-
-.img {
-  width: 27.5%;
-  float: left;
-  margin-top: 52px; }
-
-.img img {
-  max-width: 100%;
-  width: 100%; }
-
-.img a, .img img {
-  display: block; }
-
-.img + .img {
-  margin-left: 2.7%; }
+@media (max-width: 1440px) {
+  .img-all {
+    padding: 0 6% 0 6%; }
+  .img {
+    width: 31.6%;
+    padding: 0;
+    float: left; }
+  .img img {
+    width: 100%; }
+  .img a, .img img {
+    display: block; }
+  .img + .img {
+    margin-left: 2.5%; } }
 
 #aboutUs {
   background-image: url(../../img/bg.jpg); }
@@ -101,20 +96,24 @@ p {
 @media (max-width: 1024px) {
   #nav-list {
     display: none; }
-  /*.img + .img{
-		margin-left: 10px;
-		margin-top: 10px;
-	}
-
-	.img{
-		width: 38%;
-		padding: 5%;
-	}*/ }
+  .img {
+    width: 47%;
+    margin-top: 2.5%; }
+  .img + .img {
+    margin-left: 0; }
+  .img a, .img img {
+    display: block;
+    margin: 0;
+    padding: 0; }
+  .marg {
+    padding-left: 2%; } }
 
 @media (max-width: 767px) {
   .img {
     width: 100%;
-    padding: 0;
+    padding: 0%;
     float: none; }
+  .img a, .img img {
+    display: block; }
   .img + .img {
-    margin-top: 10px; } }
+    margin-left: 2.5%; } }
