--- a/sass/breakpoint/_phone.scss
+++ b/sass/breakpoint/_phone.scss
@@ -1,10 +1,15 @@
 @media(max-width: 767px){
+
 	.img{
 		width: 100%;
-		padding: 0;
+		padding: 0%;
 		float: none;
+
+	}
+	.img a, .img img{
+		display: block;
 	}
 	.img + .img{
-		margin-top: 10px;
+		margin-left: 2.5%;
 	}
 }
